--- a/dat-emulation-sandbox/dat-emulation-sandbox.vcxproj
+++ b/dat-emulation-sandbox/dat-emulation-sandbox.vcxproj
@@ -162,6 +162,7 @@
     <None Include="..\.gitignore" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\ALU\ALU.h" />
     <ClInclude Include="src\ALU\ALU_1bit.h" />
     <ClInclude Include="src\components\Decoder2_to_4.h" />
     <ClInclude Include="src\components\Full_Adder.h" />
