--- a/dat-emulation-sandbox/dat-emulation-sandbox.vcxproj.filters
+++ b/dat-emulation-sandbox/dat-emulation-sandbox.vcxproj.filters
@@ -56,6 +56,9 @@
     <ClInclude Include="src\components\Half_Adder.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\ALU\ALU.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Main.cpp">
