--- a/dat-emulation-sandbox/dat-emulation-sandbox.vcxproj
+++ b/dat-emulation-sandbox/dat-emulation-sandbox.vcxproj
@@ -171,8 +171,11 @@
     <ClInclude Include="src\Component.h" />
     <ClInclude Include="src\gates\AND_Gate.h" />
     <ClInclude Include="src\gates\Gates.h" />
+    <ClInclude Include="src\gates\NAND_Gate.h" />
+    <ClInclude Include="src\gates\NOR_Gate.h" />
     <ClInclude Include="src\gates\NOT_Gate.h" />
     <ClInclude Include="src\gates\OR_Gate.h" />
+    <ClInclude Include="src\gates\XNOR_Gate.h" />
     <ClInclude Include="src\gates\XOR_Gate.h" />
     <ClInclude Include="src\gates\XOR_Gate_4IN.h" />
   </ItemGroup>
