--- a/ALU-test/ALU-test.vcxproj
+++ b/ALU-test/ALU-test.vcxproj
@@ -62,6 +62,7 @@
     <ClCompile Include="src\components\Decoder2_to_4_Test.cpp" />
     <ClCompile Include="src\components\FullAdder_Test.cpp" />
     <ClCompile Include="src\components\HalfAdder_Test.cpp" />
+    <ClCompile Include="src\flip_flops\D_FlipFlop_Test.cpp" />
     <ClCompile Include="src\gates\AND_Test.cpp" />
     <ClCompile Include="src\gates\NAND_Test.cpp" />
     <ClCompile Include="src\gates\NOR_Test.cpp" />
@@ -69,6 +70,8 @@
     <ClCompile Include="src\gates\OR_Test.cpp" />
     <ClCompile Include="src\gates\XNOR_Test.cpp" />
     <ClCompile Include="src\gates\XOR_Test.cpp" />
+    <ClCompile Include="src\latches\D_Latch_Test.cpp" />
+    <ClCompile Include="src\latches\SR_Latch_Test.cpp" />
     <ClCompile Include="src\pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
