--- a/dat-emulation-sandbox/dat-emulation-sandbox.vcxproj
+++ b/dat-emulation-sandbox/dat-emulation-sandbox.vcxproj
@@ -170,18 +170,22 @@
     <ClInclude Include="src\components\Half_Adder.h" />
     <ClInclude Include="src\ALU\ALU_LogicUnit.h" />
     <ClInclude Include="src\Component.h" />
+    <ClInclude Include="src\components\Register_1bit.h" />
     <ClInclude Include="src\flip_flops\D_FlipFlop.h" />
     <ClInclude Include="src\gates\AND_Gate.h" />
+    <ClInclude Include="src\gates\Buffer.h" />
     <ClInclude Include="src\gates\Gates.h" />
     <ClInclude Include="src\gates\NAND_Gate.h" />
     <ClInclude Include="src\gates\NOR_Gate.h" />
     <ClInclude Include="src\gates\NOT_Gate.h" />
     <ClInclude Include="src\gates\OR_Gate.h" />
+    <ClInclude Include="src\gates\TristateBuffer.h" />
     <ClInclude Include="src\gates\XNOR_Gate.h" />
     <ClInclude Include="src\gates\XOR_Gate.h" />
     <ClInclude Include="src\gates\XOR_Gate_4IN.h" />
     <ClInclude Include="src\latches\D_Latch.h" />
     <ClInclude Include="src\latches\SR_Latch.h" />
+    <ClInclude Include="src\State.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Main.cpp" />
