Implements SR Latch without gates.

--- a/dat-emulation-sandbox/dat-emulation-sandbox.vcxproj
+++ b/dat-emulation-sandbox/dat-emulation-sandbox.vcxproj
@@ -174,7 +174,8 @@
     <ClInclude Include="src\flip_flops\JK_FlipFlop.h" />
     <ClInclude Include="src\flip_flops\MS_JK_FlipFlop.h" />
     <ClInclude Include="src\gates\AND_Gate_3IN.h" />
-    <ClInclude Include="src\gates\NAND_Gate_4IN.h" />
+    <ClInclude Include="src\gates\NAND_Gate_3IN.h" />
+    <ClInclude Include="src\latches\SR_E_Latch.h" />
     <ClInclude Include="src\register\Register_1bit.h" />
     <ClInclude Include="src\flip_flops\D_FlipFlop.h" />
     <ClInclude Include="src\gates\AND_Gate.h" />
