--- a/dat-emulation-sandbox/dat-emulation-sandbox.vcxproj.filters
+++ b/dat-emulation-sandbox/dat-emulation-sandbox.vcxproj.filters
@@ -111,6 +111,9 @@
     <ClInclude Include="src\flip_flops\MS_JK_FlipFlop.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\components\BinaryCounter.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Main.cpp">
